// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid snapshot renders 1`] = `
<r
  className="className"
  height={400}
  width={400}
  xOffset={NaN}
  xScale={
    Object {
      "bandwidth": [Function],
    }
  }
  yScale={[MockFunction]}
/>
`;

exports[`Grid snapshot renders if graphProps is not defined 1`] = `
<r
  className="className"
  xOffset={NaN}
  xScale={
    Object {
      "bandwidth": [Function],
    }
  }
/>
`;
